force-app/main/default/objects/Importador__c/Importador__c.object-meta.xml
<CustomObject>
    <label>Importador</label>
    <nameField>
        <label>Importador Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Importadores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>