force-app/main/default/objects/Importador__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Direccion</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>