force-app/main/default/objects/Importador__c/fields/O_C_Nro__c.field-meta.xml
<CustomField>
    <fullName>O_C_Nro__c</fullName>
    <label>O/C Nro</label>
    <length>150</length>
    <type>Text</type>
</CustomField>