force-app/main/default/objects/Importador__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>Pais</label>
    <length>50</length>
    <type>Text</type>
</CustomField>