force-app/main/default/objects/Importador__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pais__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>